--- a/frontend/src/pages/Logon/styles.css
+++ b/frontend/src/pages/Logon/styles.css
@@ -5,7 +5,7 @@
   margin: 0 auto;
   display: flex;
   align-items: center;
-  align-content: center;
+  align-content: space-between;
 }
 
 .logon-container section.form {
