--- a/frontend/src/pages/Register/styles.css
+++ b/frontend/src/pages/Register/styles.css
@@ -35,19 +35,19 @@
   line-height: 32px;
   font-size: 18px;
 }
-.register-container .content section form {
+.register-container .content form {
   width: 100%;
   max-width: 450px;
 }
 
-.register-container .content section form input {
+.register-container .content form input {
   margin-top: 8px;
 }
 
-.register-container .content section form .input-group {
+.register-container .content form .input-group {
   display: flex;
 }
 
-.register-container .content section form .input-group input + input {
+.register-container .content form .input-group input + input {
   margin-left: 8px;
 }
